wp-app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-deployment
  labels:
    app: wp-label
  namespace: wp-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wp-label
  template:
    metadata:
      labels:
        app: wp-label
    spec:
      containers:
      - name: wp-demo
        image: wordpress:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wpdb
  labels:
    app: wpdb-label
  namespace: wp-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wpdb-label
  template:
    metadata:
      labels:
        app: wpdb-label
    spec:
      containers:
      - name: wpdb-demo
        image: mysql:8
        imagePullPolicy: Always
        ports:
        - containerPort: 3306
