wp-app/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: wp-demo-service
  namespace: wp-demo
spec:
  selector:
    app: wp-label
  ports:
    - port: 80
---
kind: Service
apiVersion: v1
metadata:
  name: wpdb-service
  namespace: wp-demo
spec:
  selector:
    app: wpdb-label
  ports:
    - port: 3306
